--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,13 +1,12 @@
 {
   "manifest_version": 2,
   "name": "AifyFX",
-  "version": "1.8",
+  "version": "1.9",
   "description": "A Firefox plugin to rewrite text based on user-selected actions using OpenAI's API.",
   "author": "Ali Raheem",
   "browser_specific_settings": {
     "gecko": {
-      "id": "aify@shoryuken.me",
-      "strict_min_version": "78.0"
+	"id": "aify@shoryuken.me"
     }
   },
   "icons": {
