--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "AifyFX",
-  "version": "1.14",
+  "name": "Aify",
+  "version": "1.15",
   "description": "A Firefox plugin to rewrite text based on user-selected actions using OpenAI's API.",
   "author": "Ali Raheem",
   "browser_specific_settings": {
